k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: registry.gitlab.com/angelosacar9/users-api/user-api:latest
          ports:
            - containerPort: 7055
      imagePullSecrets:
        - name: gitlab-registry-secret
