k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  selector:
    app: user-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: ${CONTAINER_PORT}
  type: ClusterIP
